--- a/index.html
+++ b/index.html
@@ -26,30 +26,26 @@
     <header class="navbar navbar__mobile_fixed">
       <div class="container">
         <div class="navbar-top">
-          <a href="#main" class="logo" data-aos="fade-right">
+          <a href="#main" class="logo">
             <img
               src="img/1.header/horizontal-logo.svg"
               alt="Logo: Best Tour Plan"
               class="logo__image"
             />
           </a>
-          <form
-            action="#"
-            class="search search__mobile_hidden"
-            data-aos="fade-right"
-          >
+          <form action="#" class="search search__mobile_hidden">
             <input
               type="text"
               class="search__input"
               placeholder="Search Location"
             />
-            <button class="search__button">
+            <button class="button search__button">
               <svg class="icon search__icon">
                 <use xlink:href="img/sprite.svg#search"></use>
               </svg>
             </button>
           </form>
-          <a href="#" class="user user__mobile_hidden" data-aos="fade-right">
+          <a href="#" class="user user__mobile_hidden">
             <img
               src="img/1.header/avatar.jpg"
               alt="Avatar: Natan"
@@ -96,60 +92,25 @@
                   </button>
                 </form>
               </li>
-              <li
-                class="navbar-menu__item"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="0"
-              >
+              <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">All Deals</a>
               </li>
-              <li
-                class="navbar-menu__item"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="100"
-              >
+              <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">Hotels</a>
               </li>
-              <li
-                class="navbar-menu__item"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="200"
-              >
+              <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">Activities</a>
               </li>
-              <li
-                class="navbar-menu__item"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="300"
-              >
+              <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">Hotel Day Packages</a>
               </li>
-              <li
-                class="navbar-menu__item"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="400"
-              >
+              <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">Restaurants</a>
               </li>
-              <li
-                class="navbar-menu__item"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="500"
-              >
+              <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">Events</a>
               </li>
-              <li
-                class="navbar-menu__item"
-                data-aos="fade-zoom-in"
-                data-aos-easing="ease-in-back"
-                data-aos-delay="600"
-              >
+              <li class="navbar-menu__item">
                 <a href="#" class="navbar-menu__link">Rodrigues</a>
               </li>
             </ul>
@@ -397,7 +358,10 @@
               <span class="content__price_old">$ 10,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 8,500</span>
-                <a href="#" data-toggle="modal" class="content__button"
+                <a
+                  href="#"
+                  data-toggle="modal"
+                  class="button button content__button"
                   >Book Now</a
                 >
               </div>
@@ -450,7 +414,10 @@
               <span class="content__price_old">$ 8,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 3,000</span>
-                <a href="#" data-toggle="modal" class="content__button"
+                <a
+                  href="#"
+                  data-toggle="modal"
+                  class="button button content__button"
                   >Book Now</a
                 >
               </div>
@@ -503,7 +470,7 @@
               <span class="content__price_old">$ 10,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 9,500</span>
-                <a href="#" data-toggle="modal" class="content__button"
+                <a href="#" data-toggle="modal" class="button content__button"
                   >Book Now</a
                 >
               </div>
@@ -556,7 +523,7 @@
               <span class="content__price_old">$ 4,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 2,500</span>
-                <a href="#" data-toggle="modal" class="content__button"
+                <a href="#" data-toggle="modal" class="button content__button"
                   >Book Now</a
                 >
               </div>
@@ -609,7 +576,7 @@
               <span class="content__price_old">$ 6,500</span>
               <div class="content__price">
                 <span class="content__price_new">$ 3,500</span>
-                <a href="#" data-toggle="modal" class="content__button"
+                <a href="#" data-toggle="modal" class="button content__button"
                   >Book Now</a
                 >
               </div>
@@ -644,7 +611,7 @@
             name="email"
             required
           />
-          <button class="subscribe__button">Send</button>
+          <button class="button subscribe__button">Send</button>
         </form>
       </div>
       <!-- /.newsletter__wrapper -->
@@ -826,7 +793,7 @@
                 >The curious corner<br />
                 of chamarel</span
               >
-              <a href="#" data-toggle="modal" class="activity__button"
+              <a href="#" data-toggle="modal" class="button activity__button"
                 >Book now</a
               >
             </div>
@@ -847,7 +814,7 @@
                 >Gymkhana club golf<br />
                 course</span
               >
-              <a href="#" data-toggle="modal" class="activity__button"
+              <a href="#" data-toggle="modal" class="button activity__button"
                 >Book now</a
               >
             </div>
@@ -868,7 +835,7 @@
                 >Tamarind falls hiking<br />
                 trip - full day
               </span>
-              <a href="#" data-toggle="modal" class="activity__button"
+              <a href="#" data-toggle="modal" class="button activity__button"
                 >Book now</a
               >
             </div>
@@ -889,7 +856,7 @@
                 >The blue marine discovery<br />
                 quest</span
               >
-              <a href="#" data-toggle="modal" class="activity__button"
+              <a href="#" data-toggle="modal" class="button activity__button"
                 >Book now</a
               >
             </div>
