--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&family=Nunito:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/lazyframe.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/jquery-3.5.1.min.js" defer></script>
+    <script src="js/lazyframe.min.js"></script>
     <script src="js/jquery.validate.min.js" defer></script>
     <script src="js/jquery.mask.min.js" defer></script>
     <script src="js/swiper-bundle.min.js" defer></script>
@@ -274,7 +276,7 @@
             <div class="map">
               <iframe
                 class="map__item"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.5790052710686!2d-122.41938908482582!3d37.77646847975925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c6c8f4459%3A0xb10ed6d9b5050fa5!2sTwitter!5e0!3m2!1sru!2sua!4v1600877597752!5m2!1sru!2sua"
+                data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.5790052710686!2d-122.41938908482582!3d37.77646847975925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c6c8f4459%3A0xb10ed6d9b5050fa5!2sTwitter!5e0!3m2!1sru!2sua!4v1600877597752!5m2!1sru!2sua"
                 allowfullscreen=""
                 aria-hidden="false"
                 tabindex="0"
