--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     />
     <link rel="stylesheet" href="css/lazyframe.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/aos.css" />
+    <link
+      rel="stylesheet"
+      href="css/aos.css"
+      media="screen and (min-width:992px)"
+    />
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/jquery-3.5.1.min.js" defer></script>
     <script src="js/lazyframe.min.js"></script>
