--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
       <!-- /.container -->
     </footer>
 
-    <div class="modal">
+    <div class="modal" id="modal">
       <div class="modal__overlay"></div>
       <!-- /.modal__overlay -->
       <div class="modal__dialog">
