--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               alt="Avatar: Natan"
               class="user__avatar"
             />
-            <span class="user__name">Natan</span>
+            <span class="user__name">Nathan</span>
           </a>
           <!-- /.user -->
           <a href="#" class="menu-button navbar-top__menu-button">
@@ -80,7 +80,7 @@
                     alt="Avatar: Natan"
                     class="user__avatar"
                   />
-                  <span class="user__name">Natan</span>
+                  <span class="user__name">Nathan</span>
                 </a>
                 <!-- /.user -->
               </li>
@@ -1016,14 +1016,14 @@
                   <span class="footer-contact__txt"
                     >Tel (hotline) Monday - Saturday:
                     <a href="tel:52-56-61-38" class="footer-contact__link"
-                      >52-56-61-38</a
+                      >52&#8209;56&#8209;61&#8209;38</a
                     >
                     (08:00 am – 20:00 pm)</span
                   ><br />
                   <span class="footer-contact__txt"
                     >Tel (hotline) Sunday:
                     <a href="tel:52-56-61-38" class="footer-contact__link"
-                      >52-56-61-38</a
+                      >52&#8209;56&#8209;61&#8209;38</a
                     >
                     (08:00 am – 14:00 pm)</span
                   >
