--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
             >
             <ul class="list footer-contact__list">
               <li class="item list__item footer-contact__item">
-                <svg class="icon item__icon footer-contact__icon">
+                <svg class="icon item__icon footer-contact__icon location-icon">
                   <use xlink:href="img/sprite.svg#location"></use>
                 </svg>
                 <span class="item__txt footer-contact__txt"
@@ -1005,7 +1005,7 @@
                 >
               </li>
               <li class="item list__item footer-contact__item">
-                <svg class="icon item__icon footer-contact__icon">
+                <svg class="icon item__icon footer-contact__icon phone-icon">
                   <use xlink:href="img/sprite.svg#phone"></use>
                 </svg>
                 <div class="footer-contact__txt-wrapper">
@@ -1030,7 +1030,7 @@
                 </div>
               </li>
               <li class="item list__item footer-contact__item">
-                <svg class="icon item__icon footer-contact__icon">
+                <svg class="icon item__icon footer-contact__icon mail-icon">
                   <use xlink:href="img/sprite.svg#mail"></use>
                 </svg>
                 <a
